fixed footer on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -190,6 +190,7 @@ footer h3 {
     font-size: 1.2rem;
     margin: 20px;
     display: inline;
+    white-space: nowrap;
 }
 
 /* Grids */
